# rifgen

./: .gitignore  Cargo.toml  LICENSE  README.md  index.md
attributes_utils/: Cargo.toml
attributes_utils/src/: lib.rs
gen_attributes/: Cargo.toml  README.md
gen_attributes/src/: lib.rs
gen_attributes_utils/: Cargo.toml
rifgen_attributes_utils/: Cargo.toml
rifgen_attributes_utils/src/: lib.rs
src/: enums.rs  generator_lib.rs  lib.rs  text_formatter.rs  traits.rs  types_structs.rs
