[package]
authors = ["Kofi Otuo <otuokofi@outlook.com>"]
name = "rifgen"
version = "0.1.7"
edition = "2021"
keywords = ["swig", "java", "jni", "ffi", "cxx"]
repository = "https://github.com/Kofituo/rifgen"
license = "MIT"
description = "ffi Interface file generator. Use with flapigen"
readme = "README.md"
categories = ["api-bindings", "development-tools", "development-tools::ffi", "development-tools::build-utils"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rifgen_attr = { path = "gen_attributes", version = "0.1.0" }
syn = { version = "1.0", features = ["full", "extra-traits", "derive"] }
derive-new = "0.5"
Inflector = "0.11.4"
rifgen_attributes_utils = { path = "attributes_utils", version = "0.1.0" }
