[package]
name = "_gen_attributes"
version = "0.1.0"
authors = ["Kofi Otuo <otuokofi@outlook.com>"]
edition = "2018"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "*", features = ["full", "extra-traits", "derive"] }
quote = "1.0"