[package]
name = "rifgen_attr"
version = "0.1.0"
authors = ["Kofi Otuo <otuokofi@outlook.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "To be used only with rifgen"
repository = "https://github.com/Kofituo/rifgen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "derive"] }
quote = "1.0"
rifgen_attributes_utils = { path = "../rifgen_attributes_utils" }
